@startuml
class Pizza {
    + void prepare()
    + void bake()
    + void cut()
    + void box()
}

class TACheessPizza extends Pizza {

}
class TAPepperPizza extends Pizza {
    
}
class LDCheessPizza extends Pizza {

}
class LDPepperPizza extends Pizza {
    
}

abstract OrderPizza {
    + Pizza createPizza()
}

class TAOrderPizza extends OrderPizza {

}

class LDOrderPizza extends OrderPizza {
    
}

TAOrderPizza ..> TACheessPizza
TAOrderPizza ..> TAPepperPizza
LDOrderPizza ..> LDCheessPizza
LDOrderPizza ..> LDPepperPizza

@enduml